# open-researcher

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.single  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.single.yml  docker-compose.yml  mypy.ini  pyproject.toml  supervisord.single.conf
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build-and-release.yml  ci.yml  test.yml
api/: models.py
api/routers/: sources.py
docs/2-CORE-CONCEPTS/: data-models.md  index.md
docs/5-CONFIGURATION/: ai-providers.md  database.md  environment-reference.md  index.md  ollama.md
docs/7-DEVELOPMENT/: contributing.md
frontend/src/app/: globals.css
frontend/src/app/(dashboard)/models/: page.tsx
frontend/src/app/(dashboard)/models/components/: DefaultModelsSection.tsx  ModelTypeSection.tsx  ProviderStatus.tsx
frontend/src/app/(dashboard)/notebooks/: page.tsx
frontend/src/app/(dashboard)/notebooks/components/: NotebookCard.tsx  NotebookHeader.tsx  NotebookList.tsx  SourcesColumn.tsx
frontend/src/app/(dashboard)/settings/components/: SettingsForm.tsx
frontend/src/app/(dashboard)/transformations/: page.tsx
frontend/src/app/(dashboard)/transformations/components/: DefaultPromptEditor.tsx  TransformationPlayground.tsx
frontend/src/components/auth/: LoginForm.tsx
frontend/src/components/common/: ErrorBoundary.tsx  ModelSelector.tsx  ThemeToggle.tsx
frontend/src/components/podcasts/: EpisodeProfilesPanel.tsx  SpeakerProfilesPanel.tsx  TemplatesTab.tsx
frontend/src/components/providers/: ThemeProvider.tsx
frontend/src/components/source/: ModelSelector.tsx  SessionManager.tsx
frontend/src/components/sources/: AddSourceButton.tsx  AddSourceDialog.tsx  README.md  SourceCard.tsx
frontend/src/components/sources/steps/: SourceTypeStep.tsx
frontend/src/components/ui/: wizard-container.tsx
frontend/src/lib/: theme-script.ts
frontend/src/lib/api/: client.ts  insights.ts  sources.ts
frontend/src/lib/hooks/: use-notes.ts  use-sources.ts  useSourceChat.ts
frontend/src/lib/stores/: auth-store.ts  theme-store.ts
frontend/src/lib/types/: api.ts
open_notebook/ai/: models.py
open_notebook/database/migrations/: 1.surrealql  3.surrealql  3_down.surrealql  4.surrealql  4_down.surrealql  5.surrealql  6.surrealql  6_down.surrealql  7.surrealql  8.surrealql  8_down.surrealql  9.surrealql  9_down.surrealql
open_notebook/domain/: notebook.py
open_notebook/utils/: README.md  zotero_client.py
prompts/ask/: final_answer.jinja  query_process.jinja
setup_guide/: DOCKER_SETUP_ADVANCED.md  README.md  docker.env
tests/: test_domain.py  test_zotero.py
